--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <h2 id="ask">What's your choice? <button id="rock" name="rock" value="rock" onclick="game(this);">Rock</button> 
             <button id="paper" name="paper" value="paper" onclick="game(this);">Paper</button> 
             <button id="scissors" name="scissors" value="scissors" onclick="game(this);">Scissors</button></h2>
-        <h2>You chose: <h2 id="player-choice"></h2></h2>
-        <h2>Computer chose: <h2 id="computer-choice"></h2></h2>
+        <h2 class="chose">You chose: <span id="player-choice"></span></h2>
+        <h2 class="chose">Computer chose: <span id="computer-choice"></span></h2>
         <h1 id="result"></h1>
         <script src="script.js"></script>
     </body>
