--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Rock Paper Scissors</title>
-        <link rel="stylesheet" href="style.css">
+        <link href="styles/style.css" rel="stylesheet">
     </head>
     <body>
         <h1>Rock Paper Scissors</h1>
         <div id="player">
-            <img src="images/rock.png" id="rock" class="player-image">
-            <img src="images/paper.png" id="paper" class="player-image">
-            <img src="images/scissors.png" id="scissors" class="player-image">
+            <img class="player-choice rock" src="images/rock.png" alt="Rock as in Rock, Paper, Scissors">
+            <img class="player-choice paper" src="images/paper.png" alt="Paper as in Rock, Paper, Scissors">
+            <img class="player-choice scissors" src="images/scissors.png" alt="Scissors as in Rock, Paper, Scissors">
         </div>
         <hr>
-        <div id="computer"> 
-            <img src="images/rock.png" id="pcrock" class="computer-image">
-            <img src="images/paper.png" id="pcpaper" class="computer-image">
-            <img src="images/scissors.png" id="pcscissors" class="computer-image">
-        </div> 
-        <hr>
-        <div id="scores">
-            <span id="result"></span>
-            <h2>Rounds: <span id="rounds"></span></h2>
-            <h2>Your Score: <span id="player-score"></span></h2>
-            <h2>Computer Score: <span id="computer-score"></span></h2>
-            <h2>Ties: <span id="ties"></span></h2>
+        <div id="computer">
+            <img class="computer-choice rock" src="images/rock.png" alt="Rock as in Rock, Paper, Scissors">
+            <img class="computer-choice paper" src="images/paper.png" alt="Paper as in Rock, Paper, Scissors">
+            <img class="computer-choice scissors" src="images/scissors.png" alt="Scissors as in Rock, Paper, Scissors">
         </div>
-        <script src="script.js"></script>
+        <hr>
+
+        <h2 id="winner-str" style="margin-top: 50px; color: green;"></h2>
+        <h3 id="rounds">Rounds: </h3>
+        <h3 id="player-score">Your Score: </h3>
+        <h3 id="computer-score">Computer Score: </h3>
+        <h3 id="ties">Ties: </h3>
+        
+        <script src="scripts/main.js"></script>
     </body>
-</html>
+</html> 
